@@ -50,13 +50,9 @@ class FSPageTemplate(FSObject, Script, PageTemplate):
     meta_type = 'Filesystem Page Template'
     _owner = None  # Unowned
 
-    manage_options=(
-        (
-            {'label':'Customize', 'action':'manage_main'},
-            {'label':'Test', 'action':'ZScriptHTML_tryForm'},
-            )
-            + Cacheable.manage_options
-        )
+    manage_options=({'label':'Customize', 'action':'manage_main'},
+                    {'label':'Test', 'action':'ZScriptHTML_tryForm'},
+                   )
 
     security = ClassSecurityInfo()
     security.declareObjectProtected(View)
