@@ -94,15 +94,10 @@ class FSPythonScript(FSObject, Script):
     _proxy_roles = ()
     _owner = None  # Unowned
 
-    manage_options=(
-        (
-            {'label':'Customize', 'action':'manage_main'},
-            {'label':'Test',
-             'action':'ZScriptHTML_tryForm',
-             'help': ('PythonScripts', 'PythonScript_test.stx')},
-            )
-            + Cacheable.manage_options
-        )
+    manage_options = ({'label':'Customize', 'action':'manage_main'},
+                      {'label':'Test', 'action':'ZScriptHTML_tryForm',
+                       'help': ('PythonScripts', 'PythonScript_test.stx')},
+                     )
 
     security = ClassSecurityInfo()
     security.declareObjectProtected(View)
