@@ -2,6 +2,13 @@ CMF 2.1.0-beta2 (unreleased)
 
   Bug Fixes
 
+    - Removed extraneous "Cache" tab from FS-based skin objects
+      http://www.zope.org/Collectors/CMF/343
+
+    - CMFCore.WorkflowTool: Using the '(Default)' keyword for a type's 
+      workflow chain will now reset any custom workflow chains for the type
+      (http://www.zope.org/Collectors/CMF/475)
+
     - Use the property API to get the member specific skin, because
       direct attribute access won't work with PAS based membership.
       (http://dev.plone.org/plone/ticket/5904)
